crp_utils/processed_grammars/toy.pegjs
Start
  = Template1_$$Template2_$$RuleA$$_$RuleB$$_ / RuleB

Template1_$$Template2_$$RuleA$$_$RuleB$$_
  = Template2_$$RuleA$$_ RuleB Template2_$$RuleA$$_

Template2_$$RuleA$$_
  = RuleA RuleA

RuleA
  = "a"

RuleB
  = "b"
